--- a/Marguerita_Web1/dev/scss/base/_base.scss
+++ b/Marguerita_Web1/dev/scss/base/_base.scss
@@ -20,6 +20,9 @@ ul{
     }
 }
 
-.site-section{
-  padding-top: 33px;
+.section-content{
+  padding: 56px 0 50px;
+  h1{
+    margin-bottom: 30px;
+  }
 }
