--- a/Marguerita_Web1/dev/scss/sections/_about.scss
+++ b/Marguerita_Web1/dev/scss/sections/_about.scss
@@ -1,43 +1,21 @@
 /* =============
     About
 ============= */
-#about{
-  background-color: white;
-  display: grid;
-  grid-template-columns: 10px auto 10px;
-  grid-template-areas: ". about .";
+.about-quote{
+  margin-top: 20px;
+  background-color: $lightGrey;
+  padding: 31px 0 16px;
 
-  >div{
-    grid-area: about;
+  span{
+    color: $blue;
   }
-  h1{
-    color: #353535;
-    text-align: center;
-    padding: 20px;
-  }
-  p{
-    color: #A2A2A4;
-    padding-top: 10px;
-    padding-right: 20px;
+}
+
+#about{
     padding-bottom: 20px;
-    padding-left: 20px;
-  }
-  article{
-    h2{
-      color: #353535;
-      padding-top: 20px;
-      padding-right: 20px;
-      padding-left: 20px;
-      background-color: #F5F5F5;
-    }
-    a{
-      color: #989898;
-      padding-right: 251px;
-      padding-left: 20px;
-      background-color: #F5F5F5;
-    }
-    p{
-       background-color: #F5F5F5;
-    }
-  }
+}
+
+
+#about-last-quote{
+    margin-bottom: 50px;
 }
