--- a/Marguerita_Web1/dev/css/styles.css
+++ b/Marguerita_Web1/dev/css/styles.css
@@ -342,11 +342,15 @@ ul {
 ================================ */
 h1, h2, h3, h4, h5 {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  font-family: 'Roboto Slab', serif; }
 
 p {
   padding: 0;
   margin: 0; }
+
+body {
+  font-family: 'Open Sans', sans-serif; }
 
 /* ================================
         Buttons css
