--- a/Marguerita_Web1/dev/scss/sections/_about.scss
+++ b/Marguerita_Web1/dev/scss/sections/_about.scss
@@ -5,7 +5,14 @@
   margin-top: 20px;
   background-color: $lightGrey;
   padding: 31px 0 16px;
-
+  h2{
+    font-size: rem-calc(18);
+  }
+  p{
+    color: $greyText;
+    font-size: rem-calc(14);
+    font-weight: 700;
+  }
   span{
     color: $blue;
   }
@@ -13,8 +20,16 @@
 
 #about{
     padding-bottom: 20px;
+    h1{
+      text-align: center;
+    }
+    p{
+      text-align: justify;
+      font-size: rem-calc(14);
+      font-weight: 700;
+      color: $greyText;
+    }
 }
-
 
 #about-last-quote{
     margin-bottom: 50px;
