--- a/Marguerita_Web1/dev/scss/sections/_hero.scss
+++ b/Marguerita_Web1/dev/scss/sections/_hero.scss
@@ -7,4 +7,8 @@
   background-position: center;
   padding: 62px 0 107px;
   color: $white;
+  text-align: center;
+  h1{
+    font-size: rem-calc(25);
+  }
 }
