--- a/Marguerita_Web1/dev/scss/sections/_ingredients.scss
+++ b/Marguerita_Web1/dev/scss/sections/_ingredients.scss
@@ -3,10 +3,21 @@
 ============= */
 #ingredients{
   ul{
+    text-align: center;
     li{
       h2{
         padding: 18px 0 7px;
+        font-size: rem-calc(22);
+      }
+      p{
+        color: $greyText;
+        font-size: rem-calc(14);
+        font-weight: 700;
       }
     }
+  }
+  h1{
+    text-align: center;
+    font-size: rem-calc(30);
   }
 }
