--- a/Marguerita_Web1/dev/scss/sections/_pricing.scss
+++ b/Marguerita_Web1/dev/scss/sections/_pricing.scss
@@ -3,9 +3,15 @@
 ============= */
 #pricing{
   background-color: $lightGrey;
+  text-align: center;
 
-  h1+p{
+  h1{
+    font-size: rem-calc(30);
+  }
+  p{
     color: $greyText;
+    font-size: rem-calc(14);
+    font-weight: 700;
   }
 
   section{
@@ -14,14 +20,25 @@
     padding: 26px 0 30px;
     margin-top: 16px;
 
-    h1{
+    h2{
       margin: 0;
+      font-family: Open Sans;
+      font-size: rem-calc(33);
+      font-weight: 700;
     }
   }
 
   ul{
     background-color: $white;
     padding: 10px;
+    li{
+      p{
+        color: $black;
+        text-align: left;
+        font-size: rem-calc(15);
+        font-weight: 700;
+      }
+    }
   }
 
 }
