--- a/Marguerita_Web1/dev/scss/sections/_questions.scss
+++ b/Marguerita_Web1/dev/scss/sections/_questions.scss
@@ -4,4 +4,16 @@
 #questions{
     background-color: $blue;
     color: $white;
+    h1{
+      font-size: rem-calc(17);
+      font-weight: 700;
+    }
+    p{
+      font-size: rem-calc(12);
+      font-style: italic;
+    }
+    a{
+      font-size: rem-calc(13);
+      font-weight: 700;
+    }
 }
